--- a/src/styles/CitySearch.css
+++ b/src/styles/CitySearch.css
@@ -1,86 +1,7 @@
-/* CitySearch component
-.city-search {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 50px auto;
-    max-width: 800px;
-    font-family: Arial, sans-serif;
-  }
-  
-  .city-search h2 {
-    margin-bottom: 20px;
-    text-align: center;
-    color: #555;
-  }
-  
-  .city-search label {
-    font-size: 18px;
-    font-weight: bold;
-    margin-right: 10px;
-  }
-  
-  .city-search input[type="text"] {
-    font-size: 16px;
-    padding: 8px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    margin-right: 10px;
-  }
-  
-  .city-search button {
-    font-size: 16px;
-    padding: 8px 20px;
-    border-radius: 4px;
-    border: none;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .city-search button:hover {
-    background-color: #0062cc;
-  }
-  
-  .city-search p {
-    margin-top: 20px;
-    font-size: 16px;
-    color: #555;
-  }
-  
-  .city-search ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .city-search li {
-    margin-bottom: 20px;
-    padding: 10px;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-    color: #555;
-    text-align: center;
-  }
-  
-  .city-search li p {
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-  
-  .city-search li:nth-child(even) {
-    background-color: #f5f5f5;
-  }
 
-
-   */
-
-
-   .city-search-container {
-    width: 80%;
-    margin: 0 auto;
-  }
+.city-cards-container {
+  text-align: center;
+}
   
   .search-input-container {
     display: flex;
@@ -97,7 +18,7 @@
   }
   
   .search-button {
-    background-color: #4CAF50;
+    background-color: #af6f4c;
     color: white;
     padding: 5px 10px;
     border: none;
@@ -115,7 +36,11 @@
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
+    width: calc(100% / 3 - 10px); /* set the width of each card to one-third of the container width minus the margin */
+    display: inline-block; /* display the cards as inline blocks */
+    vertical-align: top; /* align the cards to the top */
   }
+  
   
   .city-name {
     font-size: 20px;
@@ -132,4 +57,25 @@
   .index-value {
     font-size: 16px;
   }
-  
+
+.card {
+  width: 150px;
+  height: 100px;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  display: inline-block;
+  text-align: center;
+}
+
+.card-good {
+  background-color: #6dd369; /* green */
+}
+
+.card-moderate {
+  background-color: #fcd34d; /* yellow */
+}
+
+.card-bad {
+  background-color: #ff6666; /* red */
+}
